[project]
name = "aida-ray-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "py-spy>=0.4.0",
    "ray[data,serve,train,tune]>=2.42.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
